fixed overivew not showing and cards

--- a/style2.css
+++ b/style2.css
@@ -48,11 +48,10 @@
 }
 
 .card {
+    background: #1e293b;
     width: 300px;
     border-radius: 15px;
-    overflow: hidden;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.2);
-    transition: 0.3s;
+    box-shadow: 20px rgba(0,0,0,0.2);
 }
 
 .card img {
